# prime-rl

./: .gitignore  Dockerfile  Dockerfile.cuda  Dockerfile.rocm  README.md  compare_with_swe_smith.py  decode_tokens.py  demo_advanced_oracles.py  demo_oracle_inference.py  install.sh  prepare_humaneval.py  prepare_swe_smith_hf_format.py  prepare_swe_smith_inference.py  prepare_swe_smith_trajectories.py  pyproject.toml  run_humaneval_benchmark.py  setup_swe_bench.py  setup_swe_smith_training.py  swe_bench_oracle_evaluation.py  test_oracle_basic.py
.github/workflows/: gpu_tests.yaml  release.yaml
configs/eval/: base.toml  debug.toml
configs/eval/model/: qwen3-no-think.toml  qwen3.toml  (+2 more)
configs/inference/: debug.toml  deepscaler.toml  formatask.toml  humaneval_tri_oracle.toml  intellect2_qwen_distill.toml  intellect2_qwq.toml  math_only_1b.toml  math_only_7b.toml  simple_ascii_tree.toml  simple_math.toml  simple_math_7b.toml  simple_multitask.toml  simple_reverse_two_gpus.toml  simple_unscramble.toml  swe_bench_inference.toml  swe_bench_tp4.toml  swe_bench_tp4_json.toml  swe_bench_tp4_local.toml  swe_bench_tri_oracle.toml  swe_bench_tri_oracle_fixed.toml  swe_smith_tri_oracle.toml  tri_oracle_debug.toml
configs/training/: debug.toml  deepscaler.toml  formatask.toml  humaneval_tri_oracle.toml  intellect2_qwen_distill.toml  intellect2_qwq.toml  math_only_1b.toml  math_only_7b.toml  simple_ascii_tree.toml  simple_math.toml  simple_math_7b.toml  simple_multitask.toml  simple_reverse_two_gpu.toml  simple_unscramble.toml  swe_smith_tri_oracle.toml  tri_oracle_debug.toml
scripts/: chat_ui.py
src/zeroband/: eval.py  infer.py  train.py  train_with_oracles.py
swe_bench_memory.db/: memory.db
tests/: conftest.py
tests/e2e/: test_rl.py
tests/integration/: test_advanced_oracles.py  test_oracle_integration.py
(+101 files in other folders)
